@@ -834,20 +834,20 @@ PORT z80_port = {
    "STACK",
    "CODE",
    "DATA",
-   "ISEG",
+   NULL,                        /* idata */
    NULL,                        /* pdata */
-   "XSEG",
-   "BSEG",
+   NULL,                        /* xdata */
+   NULL,                        /* bit */
    "RSEG (ABS)",
    "GSINIT",
-   "OVERLAY",
+   NULL,                        /* overlay */
    "GSFINAL",
    "HOME",
    NULL,                        /* xidata */
    NULL,                        /* xinit */
    NULL,                        /* const_name */
-   "CABS",                      /* cabs_name */
-   NULL,                        /* xabs_name */
+   "CABS (ABS)",                /* cabs_name */
+   "DABS (ABS)",                /* xabs_name */
    NULL,                        /* iabs_name */
    NULL,
    NULL,
@@ -958,20 +958,20 @@ PORT z180_port = {
    "STACK",
    "CODE",
    "DATA",
-   "ISEG",
+   NULL,                        /* idata */
    NULL,                        /* pdata */
-   "XSEG",
-   "BSEG",
+   NULL,                        /* xdata */
+   NULL,                        /* bit */
    "RSEG (ABS)",
    "GSINIT",
-   "OVERLAY",
+   NULL,                        /* overlay */
    "GSFINAL",
    "HOME",
    NULL,                        /* xidata */
    NULL,                        /* xinit */
    NULL,                        /* const_name */
-   "CABS",                      /* cabs_name */
-   NULL,                        /* xabs_name */
+   "CABS (ABS)",                /* cabs_name */
+   "DABS (ABS)",                /* xabs_name */
    NULL,                        /* iabs_name */
    NULL,
    NULL,
@@ -1084,20 +1084,20 @@ PORT gbz80_port = {
    "STACK",
    "CODE",
    "DATA",
-   "ISEG",
+   NULL,                        /* idata */
    NULL,                        /* pdata */
-   "XSEG",
-   "BSEG",
+   NULL,                        /* xdata */
+   NULL,                        /* bit */
    "RSEG",
    "GSINIT",
-   "OVERLAY",
+   NULL,                        /* overlay */
    "GSFINAL",
    "HOME",
    NULL,                        /* xidata */
    NULL,                        /* xinit */
    NULL,                        /* const_name */
-   "CABS",                      /* cabs_name */
-   NULL,                        /* xabs_name */
+   "CABS (ABS)",                /* cabs_name */
+   "DABS (ABS)",                /* xabs_name */
    NULL,                        /* iabs_name */
    NULL,
    NULL,
@@ -1210,20 +1210,20 @@ PORT r2k_port = {
    "STACK",
    "CODE",
    "DATA",
-   "ISEG",
+   NULL,                        /* idata */
    NULL,                        /* pdata */
-   "XSEG",
-   "BSEG",
+   NULL,                        /* xdata */
+   NULL,                        /* bit */
    "RSEG (ABS)",
    "GSINIT",
-   "OVERLAY",
+   NULL,                        /* overlay */
    "GSFINAL",
    "HOME",
    NULL,                        /* xidata */
    NULL,                        /* xinit */
    NULL,                        /* const_name */
-   "CABS",                      /* cabs_name */
-   NULL,                        /* xabs_name */
+   "CABS (ABS)",                /* cabs_name */
+   "DABS (ABS)",                /* xabs_name */
    NULL,                        /* iabs_name */
    NULL,
    NULL,
